--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -2,17 +2,35 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Home page</title>
+    <title>[[#{main.title.homepage}]]</title>
     <link rel="stylesheet" type="text/css" href="/webjars/bootstrap/css/bootstrap.min.css" />
 </head>
 <body>
+        <span class="container text-right">
+            <nav class="navbar navbar-expand-sm">
+                <li class="nav-item">
+                    <a class="nav-link" th:href="@{?lang=en}">
+                        <img th:src="@{/images/engFlag.png}" width="50" height="70"/> English
+                    </a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" th:href="@{?lang=uk}">
+                        <img th:src="@{/images/ukrFlag.png}" width="50" height="50"/> Українська
+                    </a>
+                </li>
+            </nav>
+        </span>
         <div class="container text-center">
             <div>
-                <h1>Will be soon</h1>
+                <h1>[[#{main.headline}]]</h1>
             </div>
             <div>
-                <h3><a th:href="@{/register}">Register</a></h3>
+                <h3><a th:href="@{/list_users}">[[#{user.list}]]</a></h3>
+                <h3><a th:href="@{/login}">[[#{menu.login}]]</a></h3>
+                <h3><a th:href="@{/register}">[[#{menu.registration}]]</a></h3>
             </div>
         </div>
+
+
 </body>
 </html>
