--- a/src/main/resources/templates/sign_up.html
+++ b/src/main/resources/templates/sign_up.html
@@ -2,13 +2,13 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Registration</title>
+    <title>[[#{menu.registration}]]</title>
     <link rel="stylesheet" type="text/css" href="/webjars/bootstrap/css/bootstrap.min.css" />
 </head>
 <body>
         <div class="container text-center">
             <div>
-                <h1>Sign up</h1>
+                <h1>[[#{user.new}]]</h1>
             </div>
             <div>
                 <form th:action="@{/register_process}" method="post"
@@ -16,24 +16,31 @@
                     th:object="${user}">
                     <div class="m-3">
                         <div class="form-group row">
-                            <label class="col-form-label col-4">Login</label>
+                            <label class="col-form-label col-2">[[#{user.login}]]</label>
                             <div class="col-8">
-                                <input type="login" class="form-control"/>
+                                <input type="text" class="form-control" th:field="*{login}" required
+                                       minlength="6" maxlength="24"/>
                             </div>
                         </div>
 
                         <div class="form-group row">
-                            <label class="col-form-label col-4">Password</label>
+                            <label class="col-form-label col-2">[[#{user.password}]]</label>
                             <div class="col-8">
-                                <input type="password" class="form-control"/>
+                                <input type="password" class="form-control" th:field="*{password}" required
+                                minlength="8" maxlength="24"/>
                             </div>
                         </div>
 
                         <div class="form-group row">
-                            <label class="col-form-label col-4">Name</label>
+                            <label class="col-form-label col-2">[[#{user.name}]]</label>
                             <div class="col-8">
-                                <input type="text" class="form-control"/>
+                                <input type="text" class="form-control" th:field="*{name}" required
+                                       minlength="2" maxlength="20"/>
                             </div>
+                        </div>
+
+                        <div>
+                            <button type="submit" class="btn btn-primary">[[#{menu.sign.up}]]</button>
                         </div>
                     </div>
                 </form>
