--- a/src/main/resources/templates/users.html
+++ b/src/main/resources/templates/users.html
@@ -11,7 +11,7 @@
         <p>
             <b>[[#{menu.greeting}]][[${#request.userPrincipal.principal.greeting}]]</b>
         </p>
-        <input type="submit" text="[[#{menu.sign.out}]]"  />
+        <input type="submit" value="Sign out"/> //TODO Locale
     </form>
     </div>
         <div class="container text-center">
