--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -6,11 +6,13 @@
     <link rel="stylesheet" type="text/css" href="/webjars/bootstrap/css/bootstrap.min.css" />
 </head>
 <body>
+<header th:insert="blocks/header_lang :: header_lang"></header>
 <div class="container text-center">
     <div>
         <h1>[[#{menu.sign.in}]]</h1>
     </div>
     <div>
+        <p th:if="${loginError}" class="error">Wrong user or password</p>
         <form th:action="@{/login.html}" method="post"
               style="max-width: 500px; margin: 0 auto"
               th:object="${user}">
