--- a/src/main/resources/templates/sign_up.html
+++ b/src/main/resources/templates/sign_up.html
@@ -6,12 +6,13 @@
     <link rel="stylesheet" type="text/css" href="/webjars/bootstrap/css/bootstrap.min.css" />
 </head>
 <body>
+    <header th:insert="blocks/header_lang :: header_lang"></header>
         <div class="container text-center">
             <div>
                 <h1>[[#{user.new}]]</h1>
             </div>
             <div>
-                <form th:action="@{/register_process}" method="post"
+                <form th:action="@{/register/process}" method="post"
                     style="max-width: 500px; margin: 0 auto"
                     th:object="${user}">
                     <div class="m-3">
