List of users and statements for manager added

--- a/src/main/resources/templates/blocks/header_lang.html
+++ b/src/main/resources/templates/blocks/header_lang.html
@@ -1,5 +1,5 @@
 <div th:fragment="header_lang">
-      <span style="float: right ">
+      <div style="float: right" >
             <nav class="navbar navbar-expand-sm">
                     <a class="nav-link" th:href="@{?lang=en}">
                         <img th:src="@{/images/engFlag.png}" width="50" height="70"/> English
@@ -8,5 +8,5 @@
                         <img th:src="@{/images/ukrFlag.png}" width="50" height="57"/> Українська
                     </a>
             </nav>
-        </span>
+</div>
 </div>
