--- a/src/main/resources/templates/check_stm_list.html
+++ b/src/main/resources/templates/check_stm_list.html
@@ -1,10 +1,40 @@
 <!DOCTYPE html>
-<html lang="en">
+<html xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>[[#{statement.list}]]</title>
+    <link rel="stylesheet" type="text/css" href="/webjars/bootstrap/css/bootstrap.min.css" />
 </head>
 <body>
-
+<header th:insert="blocks/header_lang :: header_lang"></header>
+<header th:insert="blocks/header_logout :: header_logout"></header>
+</div>
+<div class="container text-center">
+    <div>
+        <h1>[[#{statement.list}]]</h1>
+    </div>
+    <div>
+        <table class="table table-striped table-bordered">
+            <thead class="thead-dark">
+            <tr>
+                <th>[[#{statement.id}]]</th>
+                <th>[[#{statement.name}]]</th>
+                <th>[[#{statement.about}]]</th>
+                <th>[[#{statement.status}]]</th>
+                <th>[[#{statement.time}]]</th>
+            </tr>
+            </thead>
+            <tbody>
+            <tr th:each="statement: ${statementList}">
+                <td th:text="${statement.statementId}">[[#{statement.id}]]</td>
+                <td th:text="${statement.name}">[[#{statement.name}]]</td>
+                <td th:text="${statement.about}">[[#{statement.about}]]</td>
+                <td th:text="${statement.status}">[[#{statement.status}]]</td>
+                <td th:text="${statement.data}">[[#{statement.time}]]</td>
+            </tr>
+            </tbody>
+        </table>
+    </div>
+</div>
 </body>
 </html>
