Adding money for USER by MANAGER

--- a/src/main/resources/templates/blocks/header_logout.html
+++ b/src/main/resources/templates/blocks/header_logout.html
@@ -7,7 +7,7 @@
                     <i><span sec:authentication="principal.authorities">Roles</span></i>
                 </div>
             </div>
-            <input type="submit" value="Sign out"/>
+            <button type="submit">[[#{menu.sign.out}]]</button>
         </form>
     </div>
 </div>
