--- a/src/main/resources/templates/supplement_balance.html
+++ b/src/main/resources/templates/supplement_balance.html
@@ -1,10 +1,33 @@
 <!DOCTYPE html>
-<html lang="en">
+<html xmlns:th="http://www.thymeleaf.org">
 <head>
-    <meta charset="UTF-8">
-    <title>Title</title>
+    <meta charset="ISO-8859-1">
+    <title>Supplement balance</title>
 </head>
 <body>
-
+<div align="center">
+    <h1>Supplement balance</h1>
+    <br/>
+    <form action="#" th:action="@{/manager/save/{id}(id=${user.userId})}" th:object="${user}" th:method="post">
+        <table border="0" cellpadding="10">
+            <tr>
+                <td>User ID:</td>
+                <td><input type="text" th:field="*{userId}" readonly="readonly" /></td>
+            </tr>
+            <tr>
+                <td>Balance:</td>
+                <td><input type="text" th:field="*{balance}" /></td>
+            </tr>
+<!--            <tr>-->
+<!--&lt;!&ndash;                <td><input type="text" th:field="*{login}" readonly="readonly" hidden/></td>&ndash;&gt;-->
+<!--&lt;!&ndash;                <td><input type="text" th:field="*{name}" readonly="readonly" hidden/></td>&ndash;&gt;-->
+<!--&lt;!&ndash;                <td><input type="text" th:field="*{password}" readonly="readonly" hidden/></td>&ndash;&gt;-->
+<!--            </tr>-->
+            <tr>
+                <td colspan="2"><button type="submit">Save</button></td>
+            </tr>
+        </table>
+    </form>
+</div>
 </body>
 </html>
