--- a/src/main/resources/templates/users_list.html
+++ b/src/main/resources/templates/users_list.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
+<html xmlns:th="http://www.thymeleaf.org"
+      xmlns:sec="https://www.thymeleaf.org/thymeleaf-extras-springsecurity5">
 <head>
     <meta charset="UTF-8">
     <title>[[#{user.list}]]</title>
@@ -8,7 +9,7 @@
 <body>
     <header th:insert="blocks/header_lang :: header_lang"></header>
     <header th:insert="blocks/header_logout :: header_logout"></header>
-    </div>
+    <div sec:authorize="isAuthenticated()">
         <div class="container text-center">
             <div>
                 <h1>[[#{user.list}]]</h1>
@@ -31,10 +32,15 @@
                             <td th:text="${user.name}">[[#{user.name}]]</td>
                             <td th:text="${user.roles}">[[#{user.role}]]</td>
                             <td th:text="${user.balance}">[[#{user.balance}]]</td>
+
+                            <td sec:authorize="hasAuthority('MANAGER')">
+                                <a th:href="@{'/manager/users_list/' + ${user.userId} + '/add_money'}">Edit</a>
+                            </td>
                         </tr>
                     </tbody>
                 </table>
             </div>
         </div>
+    </div>
 </body>
 </html>
