--- a/src/main/resources/templates/create_stm.html
+++ b/src/main/resources/templates/create_stm.html
@@ -1,10 +1,41 @@
-<!DOCTYPE html>
-<html lang="en">
+<html xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>[[#{statement.create}]]</title>
+    <link rel="stylesheet" type="text/css" href="/webjars/bootstrap/css/bootstrap.min.css" />
 </head>
 <body>
+<header th:insert="blocks/header_lang :: header_lang"></header>
+<div class="container text-center">
+    <div>
+        <h1>[[#{statement.create}]]</h1>
+    </div>
+    <div>
+        <form th:action="@{/user/create_statement/success}" method="post"
+              style="max-width: 500px; margin: 0 auto"
+              th:object="${statement}">
+            <div class="m-3">
+                <div class="form-group row">
+                    <label class="col-form-label col-2">[[#{statement.name}]]</label>
+                    <div class="col-8">
+                        <input type="text" class="form-control" th:field="*{name}" required
+                               maxlength="24"/>
+                    </div>
+                </div>
 
+                <div class="form-group row">
+                    <label class="col-form-label col-2">[[#{statement.about}]]</label>
+                    <div class="col-8">
+                        <input type="text" class="form-control" th:field="*{about}" required
+                               maxlength="255"/>
+                    </div>
+                </div>
+                <div>
+                    <button type="submit" class="btn btn-primary">[[#{statement.create}]]</button>
+                </div>
+            </div>
+        </form>
+    </div>
+</div>
 </body>
 </html>
