--- a/src/main/resources/templates/main_page.html
+++ b/src/main/resources/templates/main_page.html
@@ -23,8 +23,8 @@
             <a th:href="@{/user/create_statement}">[[#{statement.create}]]</a>
         </h4>
         <h4>
-        <a th:href="@{/user/statements_list}">[[#{statement.list}]]</a>
-    </h4>
+            <a th:href="@{/user/statements_list}">[[#{statement.user.list}]]</a>
+        </h4>
     </div>
 </div>
 </body>
