--- a/src/main/resources/templates/check_stm_list.html
+++ b/src/main/resources/templates/check_stm_list.html
@@ -34,7 +34,7 @@
                 <td><a th:href="@{'/manager/statements_list/' + ${statement.id} + '/set_price'}">[[#{statement.set}]]</a></td>
                 <td th:text="${statement.about}">[[#{statement.about}]]</td>
                 <td th:text="${statement.status}">[[#{statement.status}]]</td>
-                <td th:text="${statement.data}">[[#{statement.time}]]</td>
+                <td th:text="${#dates.format(statement.date, 'yyyy-MM-dd HH:mm')} ">[[#{statement.time}]]</td>
             </tr>
             </tbody>
         </table>
