--- a/src/main/resources/templates/check_user_stm.html
+++ b/src/main/resources/templates/check_user_stm.html
@@ -20,10 +20,11 @@
         <th>[[#{statement.id}]]</th>
         <th>[[#{statement.name}]]</th>
         <th>[[#{statement.price}]]</th>
-        <th>[[#{statement.price}]]</th>
+        <th></th>
+        <th></th>
         <th>[[#{statement.about}]]</th>
         <th>[[#{statement.status}]]</th>
-        <th>[[#{statement.time}]]</th>
+        <th></th>
       </tr>
       </thead>
       <tbody>
@@ -31,10 +32,11 @@
         <td th:text="${statement.id}">[[#{statement.id}]]</td>
         <td th:text="${statement.name}">[[#{statement.name}]]</td>
         <td th:text="${statement.price}">[[#{statement.price}]]</td>
-        <td><a th:href="@{'/manager/statements_list/' + ${statement.id} + '/pay'}">[[#{statement.pay}]]</a></td>
+        <td><a th:href="@{'/user/statements_list/' + ${statement.id} + '/pay'}">[[#{statement.pay}]]</a></td>
+        <td><a th:href="@{'/user/statements_list/' + ${statement.id} + '/cancel'}">[[#{statement.cancel}]]</a></td>
         <td th:text="${statement.about}">[[#{statement.about}]]</td>
         <td th:text="${statement.status}">[[#{statement.status}]]</td>
-        <td th:text="${#dates.format(statement.date, 'yyyy-MM-dd HH:mm')} ">[[#{statement.time}]]</td>
+        <td><a th:href="@{'/user/statements_list/' + ${statement.id} + '/leave_comment' }">[[#{statement.comment}]]</a></td>
       </tr>
       </tbody>
     </table>
