--- a/src/main/resources/templates/main_page.html
+++ b/src/main/resources/templates/main_page.html
@@ -15,6 +15,9 @@
             <a th:href="@{/manager/users_list}">[[#{user.list}]]</a>
         </h4>
         <h4>
+            <a th:href="@{/manager/masters_list}">[[#{master.list}]]</a>
+        </h4>
+        <h4>
             <a th:href="@{/manager/statements_list}">[[#{statement.list}]]</a>
         </h4>
     </div>
@@ -24,6 +27,11 @@
         </h4>
         <h4>
             <a th:href="@{/user/statements_list}">[[#{statement.user.list}]]</a>
+        </h4>
+    </div>
+    <div sec:authorize="hasAuthority('MASTER')">
+        <h4>
+            <a th:href="@{/master/statements_list}">[[#{statement.user.list}]]</a>
         </h4>
     </div>
 </div>
