--- a/src/main/resources/templates/check_master_stm.html
+++ b/src/main/resources/templates/check_master_stm.html
@@ -20,7 +20,11 @@
                 <th>[[#{statement.id}]]</th>
                 <th>[[#{statement.name}]]</th>
                 <th>[[#{statement.about}]]</th>
-                <th>[[#{statement.status}]]</th>
+                <th>
+                    <a th:href="@{'/master/statements_list/page/' + ${currentPage} + '?sortField=masterName&sortDir=' + ${reverseSortDir}}">
+                        [[#{statement.status}]]
+                    </a>
+                </th>
                 <th></th>
                 <th></th>
             </tr>
@@ -37,6 +41,16 @@
             </tr>
             </tbody>
         </table>
+        <div class = "row col-sm-10">
+            <div class = "col-sm-2">
+                Total Rows: [[${totalElements}]] - Page [[${currentPage + 1}]] of [[${totalPages}]]
+            </div>
+            <div class = "col-sm-1">
+					<span th:each="i: ${#numbers.sequence(1, totalPages)}">
+						<a th:href="@{'/master/statements_list/page/' + ${i} + '?sortField=' + ${sortField} + '&sortDir=' + ${sortDir}}" >[[${i}]]</a> &nbsp;&nbsp;
+					</span>
+            </div>
+        </div>
     </div>
 </div>
 </body>
