--- a/src/main/resources/templates/reports_list.html
+++ b/src/main/resources/templates/reports_list.html
@@ -2,7 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>[[#{statement.list}]]</title>
+    <title>[[#{report.list}]]</title>
     <link rel="stylesheet" type="text/css" href="/webjars/bootstrap/css/bootstrap.min.css"/>
 </head>
 <body>
@@ -10,7 +10,7 @@
 <header th:insert="blocks/header_logout :: header_logout"></header>
 <div class="container text-center">
     <div>
-        <h1>[[#{statement.list}]]</h1>
+        <h1>[[#{report.list}]]</h1>
     </div>
     <div>
         <table class="table table-striped table-bordered">
@@ -23,8 +23,8 @@
                     [[#{statement.name}]]
                 </th>
                 <th>
-                    <a th:href="@{'/manager/statements_list/page/' + ${currentPage} + '?sortField=price&sortDir=' + ${reverseSortDir}}">
-                    [[#{statement.price}]]
+                    <a th:href="@{'/manager/reports_list/page/' + ${currentPage} + '?sortField=price&sortDir=' + ${reverseSortDir}}">
+                        [[#{statement.price}]]
                     </a>
                 </th>
                 <th>
@@ -34,19 +34,22 @@
                     [[#{statement.about}]]
                 </th>
                 <th>
-                    <a th:href="@{'/manager/statements_list/page/' + ${currentPage} + '?sortField=status&sortDir=' + ${reverseSortDir}}">
+                    <a th:href="@{'/manager/reports_list/page/' + ${currentPage} + '?sortField=status&sortDir=' + ${reverseSortDir}}">
                         [[#{statement.status}]]
                     </a>
                 </th>
                 <th>
-                    <a th:href="@{'/manager/statements_list/page/' + ${currentPage} + '?sortField=time&sortDir=' + ${reverseSortDir}}">
+                    <a th:href="@{'/manager/reports_list/page/' + ${currentPage} + '?sortField=time&sortDir=' + ${reverseSortDir}}">
                         [[#{statement.time}]]
                     </a>
                 </th>
                 <th>
-                    <a th:href="@{'/manager/statements_list/page/' + ${currentPage} + '?sortField=master_name&sortDir=' + ${reverseSortDir}}">
+                    <a th:href="@{'/manager/reports_list/page/' + ${currentPage} + '?sortField=master_name&sortDir=' + ${reverseSortDir}}">
                         [[#{statement.master}]]
                     </a>
+                </th>
+                <th>
+                    [[#{statement.comment}]]
                 </th>
             </tr>
             </thead>
@@ -62,6 +65,7 @@
                 <td th:text="${statement.status}">[[#{statement.status}]]</td>
                 <td th:text="${#dates.format(statement.date, 'yyyy-MM-dd HH:mm')} ">[[#{statement.time}]]</td>
                 <td th:text="${statement.masterName}">[[#{statement.master}]]</td>
+                <td th:text="${statement.comment}">[[#{statement.comment}]]</td>
             </tr>
             </tbody>
         </table>
@@ -73,7 +77,7 @@
         </div>
         <div class="col-sm-1">
 					<span th:each="i: ${#numbers.sequence(1, totalPages)}">
-						<a th:href="@{'/manager/statements_list/page/' + ${i} + '?sortField=' + ${sortField} + '&sortDir=' + ${sortDir}}">[[${i}]]</a> &nbsp;&nbsp;
+						<a th:href="@{'/manager/reports_list/page/' + ${i} + '?sortField=' + ${sortField} + '&sortDir=' + ${sortDir}}">[[${i}]]</a> &nbsp;&nbsp;
 					</span>
         </div>
     </div>
