--- a/src/main/resources/templates/check_stm_list.html
+++ b/src/main/resources/templates/check_stm_list.html
@@ -6,8 +6,8 @@
     <link rel="stylesheet" type="text/css" href="/webjars/bootstrap/css/bootstrap.min.css"/>
 </head>
 <body>
-<header th:insert="blocks/header_lang :: header_lang"></header>
-<header th:insert="blocks/header_logout :: header_logout"></header>
+<header th:insert="blocks/header :: header"></header>
+
 <div class="container text-center">
     <div>
         <h1>[[#{statement.list}]]</h1>
@@ -69,7 +69,7 @@
 
     <div class="row col-sm-10">
         <div class="col-sm-2">
-            Total Rows: [[${totalElements}]] - Page [[${currentPage}]] of [[${totalPages}]]
+            [[#{menu.total.rows}]]: [[${totalElements}]] - [[#{menu.page}]] [[${currentPage}]] [[#{menu.of}]] [[${totalPages}]]
         </div>
         <div class="col-sm-1">
 					<span th:each="i: ${#numbers.sequence(1, totalPages)}">
