--- a/src/main/resources/templates/create_stm.html
+++ b/src/main/resources/templates/create_stm.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" type="text/css" href="/webjars/bootstrap/css/bootstrap.min.css" />
 </head>
 <body>
-<header th:insert="blocks/header_lang :: header_lang"></header>
+<header th:insert="blocks/header :: header"></header>
 <div class="container text-center">
     <div>
         <h1>[[#{statement.create}]]</h1>
@@ -15,22 +15,22 @@
               style="max-width: 500px; margin: 0 auto"
               th:object="${statement}">
             <div class="m-3">
-                <div class="form-group row">
-                    <label class="col-form-label col-2">[[#{statement.name}]]</label>
+                <div class="form-group row g-2">
+                    <label class="col-form-label ml-3 col-2">[[#{statement.name}]]</label>
                     <div class="col-8">
                         <input type="text" class="form-control" th:field="*{name}" required
                                maxlength="24"/>
                     </div>
                 </div>
 
-                <div class="form-group row">
-                    <label class="col-form-label col-2">[[#{statement.about}]]</label>
+                <div class="form-group row mt-3 g-2">
+                    <label class="col-form-label  col-2">[[#{statement.about}]]</label>
                     <div class="col-8">
                         <input type="text" class="form-control" th:field="*{about}" required
                                maxlength="255"/>
                     </div>
                 </div>
-                <div>
+                <div class="mt-3">
                     <button type="submit" class="btn btn-primary">[[#{statement.create}]]</button>
                 </div>
             </div>
