--- a/src/main/resources/templates/main_page.html
+++ b/src/main/resources/templates/main_page.html
@@ -4,38 +4,119 @@
 <head>
     <meta charset="UTF-8">
     <title>Some tittle</title>
-    <link rel="stylesheet" type="text/css" href="/webjars/bootstrap/css/bootstrap.min.css" />
+    <link rel="stylesheet" type="text/css" href="/webjars/bootstrap/css/bootstrap.min.css"/>
+
 </head>
 <body>
-<header th:insert="blocks/header_lang :: header_lang"></header>
-<header th:insert="blocks/header_logout :: header_logout"></header>
-<div sec:authorize="isAuthenticated()">
+<header th:insert="blocks/header :: header"></header>
+<div style="background-color: whitesmoke">
+    <div class="container aos-init aos-animate" data-aos="zoom-out" data-aos-delay="100">
+        <h1>[[#{menu.greeting1}]]<span sec:authentication="principal.greeting">Greeting<</span></h1>
+        <h2>[[#{menu.greeting2}]]<span sec:authentication="principal.authorities">Roles</span></h2>
+    </div>
     <div sec:authorize="hasAuthority('MANAGER')">
-        <h4>
-            <a th:href="@{/manager/users_list}">[[#{user.list}]]</a>
-        </h4>
-        <h4>
-            <a th:href="@{/manager/masters_list}">[[#{master.list}]]</a>
-        </h4>
-        <h4>
-            <a th:href="@{/manager/statements_list}">[[#{statement.list}]]</a>
-        </h4>
-        <h4>
-            <a th:href="@{/manager/reports_list}">[[#{report.list}]]</a>
-        </h4>
+        <div class="row g-4 py-5 row-cols-1 row-cols-lg-3">
+            <div class="col d-flex align-items-start">
+                <svg class="bi" width="1em" height="1em">
+                    <use xlink:href="#toggles2"></use>
+                </svg>
+                <div>
+                    <h2>[[#{user.list}]]</h2>
+                    <p>[[#{admin.menu.users_list}]]</p>
+                    <a th:href="@{/manager/users_list}" class="btn btn-primary">
+                        [[#{menu.check}]]
+                    </a>
+                </div>
+            </div>
+            <div class="col d-flex align-items-start">
+                <svg class="bi" width="1em" height="1em">
+                    <use xlink:href="#cpu-fill"></use>
+                </svg>
+                <div>
+                    <h2>[[#{master.list}]]</h2>
+                    <p>[[#{admin.menu.masters_list}]]</p>
+                    <a th:href="@{/manager/masters_list}" class="btn btn-primary align-items-center">
+                        [[#{menu.check}]]
+                    </a>
+                </div>
+            </div>
+            <div class="col d-flex align-items-start">
+                <svg class="bi" width="1em" height="1em">
+                    <use xlink:href="#cpu-fill"></use>
+                </svg>
+                <div>
+                    <h2>[[#{statement.list}]]</h2>
+                    <p>[[#{admin.menu.statements_list}]]</p>
+                    <a th:href="@{/manager/statements_list}" class="btn btn-primary">
+                        [[#{menu.check}]]
+                    </a>
+                </div>
+            </div>
+        </div>
+        <div class="row g-4 py-5 row-cols-1 row-cols-lg-3">
+            <div class="col d-flex align-items-start">
+                <svg class="bi" width="1em" height="1em">
+                    <use xlink:href="#toggles2"></use>
+                </svg>
+                <div>
+                    <h2>[[#{report.list}]]</h2>
+                    <p>[[#{admin.menu.reports_list}]]</p>
+                    <a th:href="@{/manager/reports_list}" class="btn btn-primary">
+                        [[#{menu.check}]]
+                    </a>
+                </div>
+            </div>
+        </div>
     </div>
     <div sec:authorize="hasAuthority('USER')">
-        <h4>
-            <a th:href="@{/user/create_statement}">[[#{statement.create}]]</a>
-        </h4>
-        <h4>
-            <a th:href="@{/user/statements_list}">[[#{statement.user.list}]]</a>
-        </h4>
+        <div class="row g-4 py-5 row-cols-1 row-cols-lg-3">
+            <div class="col d-flex align-items-start">
+                <svg class="bi" width="1em" height="1em">
+                    <use xlink:href="#toggles2"></use>
+                </svg>
+                <div>
+                    <h2>[[#{statement.create}]]</h2>
+                    <p>Paragraph of text beneath the heading to explain the heading. We'll add onto it with another
+                        sentence
+                        and probably just keep going until we run out of words.</p>
+                    <a th:href="@{/user/create_statement}" class="btn btn-primary">
+                        [[#{menu.check}]]
+                    </a>
+                </div>
+            </div>
+            <div class="col d-flex align-items-start">
+                <svg class="bi" width="1em" height="1em">
+                    <use xlink:href="#cpu-fill"></use>
+                </svg>
+                <div>
+                    <h2>[[#{statement.user.list}]]</h2>
+                    <p>Paragraph of text beneath the heading to explain the heading. We'll add onto it with another
+                        sentence
+                        and probably just keep going until we run out of words.</p>
+                    <a th:href="@{/user/statements_list}" class="btn btn-primary">
+                        [[#{menu.check}]]
+                    </a>
+                </div>
+            </div>
+        </div>
     </div>
-    <div sec:authorize="hasAuthority('MASTER')">
-        <h4>
-            <a th:href="@{/master/statements_list}">[[#{statement.user.list}]]</a>
-        </h4>
+        <div sec:authorize="hasAuthority('MASTER')">
+            <div class="row g-4 py-5 row-cols-1 row-cols-lg-3">
+                <div class="col d-flex align-items-start">
+                    <svg class="bi" width="1em" height="1em">
+                        <use xlink:href="#toggles2"></use>
+                    </svg>
+                    <div>
+                        <h2>[[#{statement.user.list}]]</h2>
+                        <p>Paragraph of text beneath the heading to explain the heading. We'll add onto it with another
+                            sentence
+                            and probably just keep going until we run out of words.</p>
+                        <a th:href="@{/master/statements_list}" class="btn btn-primary">
+                            [[#{menu.check}]]
+                        </a>
+                    </div>
+                </div>
+        </div>
     </div>
 </div>
 </body>
