--- a/src/main/resources/templates/reports_list.html
+++ b/src/main/resources/templates/reports_list.html
@@ -6,8 +6,8 @@
     <link rel="stylesheet" type="text/css" href="/webjars/bootstrap/css/bootstrap.min.css"/>
 </head>
 <body>
-<header th:insert="blocks/header_lang :: header_lang"></header>
-<header th:insert="blocks/header_logout :: header_logout"></header>
+<header th:insert="blocks/header :: header"></header>
+
 <div class="container text-center">
     <div>
         <h1>[[#{report.list}]]</h1>
@@ -26,9 +26,6 @@
                     <a th:href="@{'/manager/reports_list/page/' + ${currentPage} + '?sortField=price&sortDir=' + ${reverseSortDir}}">
                         [[#{statement.price}]]
                     </a>
-                </th>
-                <th>
-
                 </th>
                 <th>
                     [[#{statement.about}]]
@@ -58,9 +55,6 @@
                 <td th:text="${statement.id}">[[#{statement.id}]]</td>
                 <td th:text="${statement.name}">[[#{statement.name}]]</td>
                 <td th:text="${statement.price}">[[#{statement.price}]]</td>
-                <td>
-                    <a th:href="@{'/manager/statements_list/' + ${statement.id} + '/set_price'}">[[#{statement.set}]]</a>
-                </td>
                 <td th:text="${statement.about}">[[#{statement.about}]]</td>
                 <td th:text="${statement.status}">[[#{statement.status}]]</td>
                 <td th:text="${#dates.format(statement.date, 'yyyy-MM-dd HH:mm')} ">[[#{statement.time}]]</td>
@@ -73,7 +67,7 @@
 
     <div class="row col-sm-10">
         <div class="col-sm-2">
-            Total Rows: [[${totalElements}]] - Page [[${currentPage}]] of [[${totalPages}]]
+            [[#{menu.total.rows}]]: [[${totalElements}]] - [[#{menu.page}]] [[${currentPage + 1}]] [[#{menu.of}]] [[${totalPages}]]
         </div>
         <div class="col-sm-1">
 					<span th:each="i: ${#numbers.sequence(1, totalPages)}">
