--- a/src/main/resources/templates/sign_up.html
+++ b/src/main/resources/templates/sign_up.html
@@ -3,49 +3,68 @@
 <head>
     <meta charset="UTF-8">
     <title>[[#{menu.registration}]]</title>
-    <link rel="stylesheet" type="text/css" href="/webjars/bootstrap/css/bootstrap.min.css" />
+    <link rel="stylesheet" type="text/css" href="/webjars/bootstrap/css/bootstrap.min.css"/>
 </head>
 <body>
-    <header th:insert="blocks/header_lang :: header_lang"></header>
-        <div class="container text-center">
-            <div>
-                <h1>[[#{user.new}]]</h1>
-            </div>
-            <div>
-                <form th:action="@{/register/process}" method="post"
-                    style="max-width: 500px; margin: 0 auto"
-                    th:object="${user}">
-                    <div class="m-3">
-                        <div class="form-group row">
-                            <label class="col-form-label col-2">[[#{user.login}]]</label>
-                            <div class="col-8">
-                                <input type="text" class="form-control" th:field="*{login}" required
-                                       minlength="5" maxlength="24"/>
-                            </div>
-                        </div>
-
-                        <div class="form-group row">
-                            <label class="col-form-label col-2">[[#{user.password}]]</label>
-                            <div class="col-8">
-                                <input type="password" class="form-control" th:field="*{password}" required
-                                minlength="8" maxlength="24"/>
-                            </div>
-                        </div>
-
-                        <div class="form-group row">
-                            <label class="col-form-label col-2">[[#{user.name}]]</label>
-                            <div class="col-8">
-                                <input type="text" class="form-control" th:field="*{name}" required
-                                       minlength="2" maxlength="20"/>
-                            </div>
-                        </div>
-
-                        <div>
-                            <button type="submit" class="btn btn-primary">[[#{menu.sign.up}]]</button>
-                        </div>
+<nav class="py-2 bg-dark border-bottom">
+    <div class="container d-flex flex-wrap">
+        <ul class="nav me-auto">
+            <li class="nav-item"><a th:href="@{/}" class="nav-link link-light px-3 active" aria-current="page"
+                                    style="color: orange">Repair Agency</a></li>
+            <li class="nav-item">
+                <a class="nav-link" th:href="@{?lang=en}">
+                    <img th:src="@{/images/engFlag.png}" width="20" height="30"/>
+                </a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" th:href="@{?lang=uk}">
+                    <img th:src="@{/images/ukrFlag.png}" width="20" height="27"/>
+                </a>
+            </li>
+        </ul>
+    </div>
+</nav>
+<div class="container text-center">
+    <div>
+        <h1>[[#{user.new}]]</h1>
+    </div>
+    <div>
+        <form th:action="@{/register/process}" method="post"
+              style="max-width: 500px; margin: 0 auto"
+              th:object="${user}">
+            <div class="m-3">
+                <div class="form-group row mt-3">
+                    <label class="col-form-label col-2">[[#{user.login}]]</label>
+                    <div class="col-8">
+                        <input type="text" class="form-control" th:field="*{login}" required
+                               minlength="5" maxlength="24"/>
+                        <div th:if="${#fields.hasErrors('login')}" th:errors="*{login}">Login error</div>
                     </div>
-                </form>
+                </div>
+
+                <div class="form-group row mt-3">
+                    <label class="col-form-label col-2">[[#{user.password}]]</label>
+                    <div class="col-8">
+                        <input type="password" class="form-control" th:field="*{password}" required
+                               minlength="8" maxlength="24"/>
+                        <div th:if="${#fields.hasErrors('password')}" th:errors="*{password}">Password error</div>
+                    </div>
+                </div>
+
+                <div class="form-group row mt-3">
+                    <label class="col-form-label col-2">[[#{user.name}]]</label>
+                    <div class="col-8">
+                        <input type="text" class="form-control" th:field="*{name}" required
+                               minlength="2" maxlength="20"/>
+                    </div>
+                </div>
+
+                <div class="mt-3">
+                    <button type="submit" class="btn btn-primary">[[#{menu.sign.up}]]</button>
+                </div>
             </div>
-        </div>
+        </form>
+    </div>
+</div>
 </body>
 </html>
