--- a/src/main/resources/templates/stm_success.html
+++ b/src/main/resources/templates/stm_success.html
@@ -6,7 +6,7 @@
   <link rel="stylesheet" type="text/css" href="/webjars/bootstrap/css/bootstrap.min.css" />
 </head>
 <body>
-<header th:insert="blocks/header_lang :: header_lang"></header>
+<header th:insert="blocks/header :: header"></header>
 <div class="container text-center">
   <div>
     <h3>[[#{statement.create.success}]]</h3>
