--- a/src/main/resources/templates/supplement_balance.html
+++ b/src/main/resources/templates/supplement_balance.html
@@ -16,7 +16,9 @@
             </tr>
             <tr>
                 <td>[[#{user.balance}]]:</td>
-                <td><input type="text" th:field="*{balance}" /></td>
+                <td><input type="text" th:field="*{balance}" />
+                    <div th:if="${#fields.hasErrors('balance')}" th:errors="*{balance}">Balance error</div>
+                </td>
             </tr>
             <tr>
                 <td colspan="2"><button type="submit">[[#{menu.save}]]</button></td>
