--- a/src/main/resources/templates/check_user_stm.html
+++ b/src/main/resources/templates/check_user_stm.html
@@ -31,19 +31,29 @@
                 <td th:text="${statement.id}">[[#{statement.id}]]</td>
                 <td th:text="${statement.name}">[[#{statement.name}]]</td>
                 <td th:text="${statement.price}">[[#{statement.price}]]</td>
-                <td><a th:href="@{'/user/statements_list/' + ${statement.id} + '/pay'}">[[#{statement.pay}]]</a></td>
-                <td><a th:href="@{'/user/statements_list/' + ${statement.id} + '/cancel'}">[[#{statement.cancel}]]</a>
+                <td>
+                    <div th:if="${statement.status == 'WAITING FOR PAYMENT'}">
+                    <a th:href="@{'/user/statements_list/' + ${statement.id} + '/pay'}">[[#{statement.pay}]]</a>
+                    </div>
+                </td>
+                <td>
+                    <div th:if="${statement.status == 'WAITING FOR PAYMENT'}">
+                    <a th:href="@{'/user/statements_list/' + ${statement.id} + '/cancel'}">[[#{statement.cancel}]]</a>
+                    </div>
                 </td>
                 <td th:text="${statement.about}">[[#{statement.about}]]</td>
                 <td th:text="${statement.status}">[[#{statement.status}]]</td>
-                <td><a th:href="@{'/user/statements_list/' + ${statement.id} + '/leave_comment' }">[[#{statement.comment}]]</a>
+                <td>
+                    <div th:if="${statement.status == 'DONE'}">
+                    <a th:href="@{'/user/statements_list/' + ${statement.id} + '/leave_comment' }">[[#{statement.comment}]]</a>
+                    </div>
                 </td>
             </tr>
             </tbody>
         </table>
         <div class="row col-sm-10">
             <div class="col-sm-2">
-                [[#{menu.total.rows}]]: [[${totalElements}]] - [[#{menu.page}]] [[${currentPage}]] [[#{menu.of}]] [[${totalPages}]]
+                [[#{menu.total.rows}]]: [[${totalElements}]] - [[#{menu.page}]] [[${currentPage + 1}]] [[#{menu.of}]] [[${totalPages}]]
             </div>
             <div class="col-sm-1">
 
