--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -9,7 +9,7 @@
 <nav class="py-2 bg-dark border-bottom">
   <div class="container d-flex flex-wrap">
     <ul class="nav me-auto">
-      <li class="nav-item"><a th:href="@{/}" class="nav-link link-light px-3 active" aria-current="page" style="color: orange">Repair Agency</a></li>
+      <li class="nav-item"><a th:href="@{/}" class="nav-link link-light px-3 active" aria-current="page" style="color: orange">[[#{menu.repair.agency}]]</a></li>
       <li class="nav-item">
         <a class="nav-link" th:href="@{?lang=en}">
           <img th:src="@{/images/engFlag.png}" width="20" height="30"/>
